@@ -1,0 +1,14 @@
+﻿<?xml version="1.0"?>
+<configuration>
+  <system.webServer>
+    <staticContent>
+      <!--Recommended - one year (8760 hours)-->
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="8760:00:00" />
+      <!--Never - turns off long duration cacheing -->
+      <!--<clientCache cacheControlMode="DisableCache"/>-->
+
+      <!--Forever! - not reccommended in the RFC -->
+      <!--<clientCache cacheControlMode="UseExpires" httpExpires="Sun, 17-Jan-2038 19:14:07 GMT" />-->
+    </staticContent>
+  </system.webServer>
+</configuration>
